# TrucoOnline

./: .env  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  run.py  test.py
app/: asgi.py  context.py  exceptions.py  factory.py  middlewares.py  models.py  settings.py
app/auth/: routes.py  schemas.py
app/databases/: database.py  exceptions.py  games.py  truco.py  users.py
app/game/: helpers.py  routes.py  schemas.py
app/queue/: helpers.py  routes.py  schemas.py
tests/: client.py  conftest.py  test_auth.py  test_queue.py  utils.py
utils/: constants.py  initialize.py
